[package]
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
categories = ["command-line-utilities", "science"]
keywords = ["astronomy", "ADS"]
name = "libads"
publish = "false"
readme = "README.md"
version = "0.1.0-alpha"

[dependencies]
lazy_static = "0.2"
regex = "0.2.2"
reqwest = "0.5.0"
select = "0.3.0"
slog = "1.4.1"
slog-stdlog = "1.1.0"
