[package]
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
description = "For interacting with API of the Astonomy Data System"
categories = ["science"]
keywords = ["astronomy", "ADS"]
name = "libads"
repository = "https://github.com/musoke/libads"
publish = true
readme = "README.md"
version = "0.1.0-beta"
license = "Apache-2.0"

[dependencies]
lazy_static = "0.2.8"
regex = "0.2.2"
reqwest = "0.7.3"
select = "0.3.0"
slog = "1.4.1"
slog-stdlog = "1.1.0"
