[package]
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
categories = ["science"]
description = "For interacting with API of the Astronomy Data System"
keywords = [
    "astronomy",
    "ADS",
]
license = "Apache-2.0"
name = "libads"
publish = false
readme = "README.md"
repository = "https://github.com/musoke/libads"
version = "0.1.0-beta"

[dependencies]
lazy_static = "0.2.8"
log = "0.4.8"
regex = "0.2.2"
reqwest = "0.7.3"
select = "0.3.0"
